# mongochem

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYING  CTestConfig.cmake  README.md  main.cxx  mainwindow.cxx  mainwindow.h  mainwindow.ui  mongomodel.cxx  mongomodel.h  project.config
ChemData/: CMakeLists.txt  DetailDialog.cxx  DetailDialog.h  MongoModel.cxx  MongoModel.h  MongoRecordModel.cxx  MongoRecordModel.h  MongoTableView.cxx  MongoTableView.h  chemdata.cxx  diagramtooltipitem.cpp  graphdialog.cpp  graphdialog.h  graphdialog.ui  mainwindow.cxx  mainwindow.h  mainwindow.ui  mongomodel.cxx  mongomodel.h  parallelcoordinatesdialog.cpp  parallelcoordinatesdialog.h  parallelcoordinatesdialog.ui  plotmatrixdialog.cpp  quickquerywidget.cpp  quickquerywidget.h  quickquerywidget.ui  serversettingsdialog.cpp  serversettingsdialog.ui
chemdata/: CMakeLists.txt  addtagdialog.cpp  addtagdialog.h  chemdata.cpp  computationalresultsmodel.cpp  computationalresultsmodel.h  computationalresultstableview.cpp  computationalresultstableview.h  detaildialog.cpp  diagramtooltipitem.cpp  diagramtooltipitem.h  exportmoleculehandler.cpp  exportmoleculehandler.h  fingerprintsimilaritydialog.cpp  fingerprintsimilaritydialog.h  fingerprintsimilaritydialog.ui  graphdialog.cpp  graphdialog.h  graphdialog.ui  histogramdialog.cpp  histogramdialog.h  histogramdialog.ui  importcsvfiledialog.cpp  importcsvfiledialog.h  kmeansclusteringdialog.cpp  kmeansclusteringdialog.h  kmeansclusteringdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  moleculedetaildialog.cpp  moleculedetaildialog.h  moleculedetaildialog.ui  moleculeref.h  mongodatabase.cpp  mongodatabase.h  mongomodel.cpp  mongomodel.h  mongorecordmodel.cpp  mongorecordmodel.h  (+25 more)
chemdata/app/: CMakeLists.txt  main.cpp
chemdata/core/: CMakeLists.txt  chemdata.h  moleculeref.h  mongodatabase.cpp  mongodatabase.h  objectref.h  plugin.h
chemdata/gui/: CMakeLists.txt  abstractclusteringwidget.cpp  abstractclusteringwidget.h  abstractimportdialog.cpp  abstractimportdialog.h  abstractvtkchartwidget.cpp  abstractvtkchartwidget.h  addtagdialog.cpp  addtagdialog.h  computationalresultsmodel.cpp  computationalresultsmodel.h  computationalresultstableview.cpp  computationalresultstableview.h  diagramtooltipitem.cpp  diagramtooltipitem.h  exportmoleculehandler.cpp  exportmoleculehandler.h  importcsvfiledialog.cpp  importcsvfiledialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moleculedetaildialog.cpp  moleculedetaildialog.h  mongomodel.cpp  mongomodel.h  mongotableview.cpp  mongotableview.h  openineditorhandler.cpp  openineditorhandler.h  quickquerywidget.cpp  quickquerywidget.h  quickquerywidget.ui  selectionfiltermodel.cpp  selectionfiltermodel.h  serversettingsdialog.h  substructurefiltermodel.cpp  substructurefiltermodel.h
chemdata/plugins/: CMakeLists.txt
chemdata/plugins/csvimporter/: CMakeLists.txt  csvimporterplugin.cpp  importcsvfiledialog.cpp  importcsvfiledialog.h  importcsvfiledialog.ui
chemdata/plugins/histogram/: CMakeLists.txt  histogramdialog.cpp  histogramdialog.h  histogramdialog.ui  histogramplugin.cpp
chemdata/plugins/kmeansclustering/: CMakeLists.txt  kmeansclusteringdialog.cpp  kmeansclusteringdialog.h  kmeansclusteringdialog.ui  kmeansclusteringplugin.cpp
chemdata/plugins/parallelcoordinates/: CMakeLists.txt  parallelcoordinatesdialog.cpp  parallelcoordinatesdialog.h  parallelcoordinatesdialog.ui  parallelcoordinatesplugin.cpp
chemdata/plugins/plotmatrix/: CMakeLists.txt  plotmatrixdialog.cpp  plotmatrixdialog.h  plotmatrixdialog.ui  plotmatrixplugin.cpp
chemdata/plugins/scatterplot/: CMakeLists.txt  scatterplotdialog.cpp  scatterplotdialog.h  scatterplotdialog.ui  scatterplotplugin.cpp
chemdata/plugins/similaritygraph/: CMakeLists.txt  fingerprintsimilaritydialog.cpp  fingerprintsimilaritydialog.h  fingerprintsimilaritydialog.ui  similaritygraphplugin.cpp  structuresimilaritydialog.cpp  structuresimilaritydialog.h  structuresimilaritydialog.ui
chemdata/rpc/: CMakeLists.txt  rpclistener.cpp  rpclistener.h
descriptors/: CMakeLists.txt  cactus_import.cpp  descriptors.cpp  ensure-indices.py  import-chemfiles.py  import-obabel-diagrams.py  import-pubchem2d.py  import-pubchem3d.py  make-descriptors-csv-file.py  pubchem_import.cpp  settings.json
mongochem/: CMakeLists.txt
mongochem/app/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mongochem.qrc  mongochemconfig.h.in
mongochem/app/icons/: mongochem.icns  mongochem.rc
mongochem/gui/: CMakeLists.txt  abstractclusteringwidget.cpp  abstractclusteringwidget.h  abstractimportdialog.cpp  abstractimportdialog.h  abstractvtkchartwidget.cpp  abstractvtkchartwidget.h  addtagdialog.cpp  addtagdialog.h  addtagdialog.ui  avogadrotools.cpp  avogadrotools.h  batchjobdecorator.cpp  batchjobdecorator.h  batchjobmanager.cpp  batchjobmanager.h  chemkit.cpp  chemkit.h  cjsonexporter.cpp  cjsonexporter.h  computationalresultsmodel.cpp  computationalresultsmodel.h  computationalresultstableview.cpp  computationalresultstableview.h  diagramtooltipitem.cpp  diagramtooltipitem.h  exportmoleculehandler.cpp  exportmoleculehandler.h  inputgeneratormanager.cpp  inputgeneratormanager.h  moleculedetaildialog.cpp  moleculedetaildialog.h  moleculedetaildialog.ui  moleculeref.h  mongodatabase.cpp  mongodatabase.h  mongomodel.cpp  mongomodel.h  mongotableview.cpp  mongotableview.h  (+21 more)
mongochem/plugins/: CMakeLists.txt  pluginmanager.cpp  pluginmanager.h
mongochem/plugins/csvimporter/: CMakeLists.txt  importcsvfiledialog.cpp  importcsvfiledialog.h  importcsvfiledialog.ui
mongochem/plugins/histogram/: CMakeLists.txt  histogramdialog.cpp  histogramdialog.h  histogramdialog.ui
mongochem/plugins/kmeansclustering/: CMakeLists.txt  (+3 more)
tests/gui/: CMakeLists.txt  cjsonexportertest.cpp  cjsonexportertest.h  query-for-methanol.xml
tests/rpc/: CMakeLists.txt  chemdatarpc.py  get-chemical-json.cpp  get-chemical-json.py  get_chemical_json.py  mongochemrpc.py  resolve-name-to-inchi.py  resolve_name_to_inchi.py
(+37 files in other folders)
